Use clamp for thread pool size. Null check player sessions to remove